# datenwerft

./: .djlintrc  .eslintrc.json  .gitignore  .stylelintrc.json  Dockerfile  README.md  celery.service  celery.service.template  datenwerft-worker.service  docker-compose.traefik.override.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  manage.py  migrations.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  rq-worker.service  ruff.toml  setup.cfg
.github/codeql/: config.yml
.github/workflows/: codeql.yml  linting.yml  plant.yml  plantUML.yml  release.yml  tests.yml  version.yml
accounts/: apps.py  backend.py  emails.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
angebotsdb/: README.md  Todo.md  admin.py  apps.py  constants_vars.py  dashboard.py  fields.py  signals.py  urls.py  utils.py
angebotsdb/docs/: datamodel.dbml  rechte-und-rollen.md  redaktionsprozess.md  technik.md
angebotsdb/management/: __init__.py
angebotsdb/migrations/: 0001_initial.py  0002_alter_orgunitservicepermission_options_and_more.py  0003_remove_provider_address_provider_city_and_more.py  0004_alter_reviewtask_assigned_org_unit.py
angebotsdb/models/: base.py  services.py
angebotsdb/templatetags/: angebotsdb_tags.py
angebotsdb/tests/: abstract.py  constant_vars.py  functions.py  test_models.py
angebotsdb/views/: addView.py  base.py  forms.py  functions.py  inbox.py  indexView.py  listView.py  review.py
antragsmanagement/: apps.py  constants_vars.py  tags.py  urls.py  utils.py
antragsmanagement/migrations/: 0001_initial.py  0002_data.py  0003_alter_authority_email_alter_requester_email.py  0003_alter_cleanupeventcontainer_place_and_more.py  0003_alter_cleanupeventdetails_equipments_and_more.py  0003_alter_cleanupeventresponsibilities_unique_together.py  0003_authority_email_and_more.py  0003_email_subject.py  0004_alter_cleanupeventcontainer_place_and_more.py  0004_alter_cleanupeventresponsibilities_unique_together.py  0004_alter_email_body.py  0004_alter_email_subject.py  0004_rename_cleanupeventcomment_cleanupeventrequestcomment.py  0005_alter_cleanupeventresponsibilities_unique_together_and_more.py  0005_cleanupeventrequest_comment.py  0005_remove_requester_registered_requester_user_id.py  0006_alter_cleanupeventrequest_responsibilities.py  0006_cleanupeventcontainer_cleanupeven_cleanup_95952b_idx_and_more.py  0007_alter_cleanupeventcodelistequipment_options_and_more.py  0007_cleanupeventdump.py  0008_alter_cleanupeventcontainer_options_and_more.py  0009_alter_cleanupeventcontainer_cleanupevent_request_and_more.py  (+2 more)
assets/: hilfe  package-lock.json  package.json
assets/helpers/: generics.js  (+1 more)
bemas/: apps.py  tags.py  urls.py  utils.py
d3/: admin.py  apps.py  constants_vars.py  models.py  urls.py  utils.py
datenerfassung/: context_processors.py  secrets.template  settings.py  urls.py  wsgi.py
datenmanagement/: api_filters.py  apps.py  models.py  storage.py  tags.py  tasks.py  urls.py  utils.py  views.py
datenwerft/: __init__.py  celery.py  context_processors.py  db_routers.py  secrets.template  settings.py  urls.py  views.py  wsgi.py
fmm/: apps.py  constants_vars.py  urls.py  utils.py
gdihrocodelists/: admin.py  apps.py  constants_vars.py  urls.py
gdihrometadata/: admin.py  apps.py  constants_vars.py  urls.py
hilfe/: Makefile  README.md  index.md
kiju/: README.md  Todo.md  admin.py  apps.py  dashboard.py  fields.py  urls.py  utils.py  views.py
lint/: lint  stylelint
linting/: djlint  eslint  lint  pycodestyle  ruff  stylelint
metadatenmanagement/: admin.py  apps.py  serializers.py  tags.py  urls.py  views.py
pygeoapi/: admin.py  apps.py  constants_vars.py  models.py  urls.py  utils.py
stadtbereichskatalog/: apps.py  constants_vars.py  tags.py  urls.py  utils.py
subsetter/: apps.py  models.py  tests.py  urls.py  views.py
templates/: base.html  index.html  modal-loading.html  navbar.html
toolbox/: 405.html  README.md  admin.py  apps.py  constants_vars.py  fields.py  models.py  pdfs.py  tags.py  tests.py  urls.py  utils.py  views.py
(+607 files in other folders)
