# General project configuration

[project]
name = "datenwerft"
version = "0.1.0"
description = "A web application for editing geospatial data, based on Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.7",
    "django-auth-ldap>=5.1.0",
    "django-datatables-view>=1.20.0",
    "django-jsonview>=2.0.0",
    "django-leaflet>=0.31.0",
    "django-ratelimit>=4.1.0",
    "django-rq>=3.0.0",
    "django-user-agents>=0.4.0",
    "djangorestframework>=3.15.2",
    "docutils>=0.21.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "laspy[laszip,lazrs]>=2.5.4",
    "lxml>=5.3.1",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pyblisher>=0.2.2",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "ua-parser>=1.0.1",
    "user-agents>=2.2.0",
]

# Development dependencies

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.9.10",
]


# djLint configuration

[tool.djlint]
profile = "django"
use_gitignore = true
exclude = ".github,docs,hilfe,linting,logs,node_modules,static,uploads,vendor"
ignore = "H006,T003"
ignore_case = true


# Ruff configuration

[tool.ruff]
exclude = [
  ".github",
  "docs",
  "hilfe",
  "linting",
  "logs",
  "node_modules",
  "static",
  "uploads",
  "vendor",
  "*/migrations/*"
]
line-length = 99
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
ignore = ["DJ001", "DJ012", "F403", "F405"]
select = [
  # default
  "E",      # pycodestyle errors
  "F",      # flake8 errors
  # extra
  "A",      # built-in shadowing
  "DJ",     # flake8 django
  "LOG",    # flake8 logging
  "PIE",    # flake8 pie
  "T10",    # flake8 print
  "TCH",    # flake8 type-checking
  "W",      # pycodestyle warnings
  "YTT"    # wrong usage of sys.info
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
