# General project configuration

[project]
name = "datenwerft"
version = "0.1.0"
description = "A web application for editing geospatial data, based on Django"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django",
  "django-auth-ldap",
  "django-datatables-view",
  "django-filter",
  "django-jsonview",
  "django-leaflet",
  "django-ratelimit",
  "django-rq",
  "django-user-agents",
  "djangorestframework",
  "docutils",
  "httpx",
  "jinja2",
  "laspy[laszip,lazrs]",
  "lxml",
  "pillow",
  "psycopg2-binary",
  "pyblisher",
  "pyyaml",
  "redis",
  "requests",
  "ua-parser",
  "user-agents",
]


# Development dependencies

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "django-stubs[compatible-mypy]>=5.2.2",
    "django-types>=0.22.0",
    "djlint",
    "ruff",
]


# djLint configuration

[tool.djlint]
profile = "django"
use_gitignore = true
exclude = ".github,docs,linting,logs,node_modules,static,uploads,vendor"
ignore = "H006,T003"
ignore_case = true


# Ruff configuration

[tool.ruff]
exclude = [
  ".github",
  "docker/container/web/secrets.py",
  "docs",
  "linting",
  "logs",
  "node_modules",
  "static",
  "uploads",
  "vendor",
  "*/migrations/*",
]
line-length = 99
indent-width = 2
target-version = "py312"

[tool.ruff.lint]
ignore = ["DJ001", "DJ012", "F403", "F405"]
select = [
  # default
  "E", # pycodestyle errors
  "F", # flake8 errors
  # extra
  "A",   # built-in shadowing
  "DJ",  # flake8 django
  "LOG", # flake8 logging
  "PIE", # flake8 pie
  "T10", # flake8 print
  "TCH", # flake8 type-checking
  "W",   # pycodestyle warnings
  "YTT", # wrong usage of sys.info
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
